--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,20 @@
+body,
+figure,
+figcaption, ul, h1, h2, h3, h4, p, ul, li ,a,button, nav {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-  --offset: 30px;
-  --asideTitle-color: #c29545;
+  --offset: 20px;
+  --prevailing-color: #882426;
+  --asideBackgroundColor-color: #c29545;
   --asideText-color: #f0efea;
   --mainText-color: #323030;
   --font: 'Poppins', sans-serif;
+  --sizePrevailing-h2: 36px;
   --dimensionsCircle: 25px;
-}
-
-body,
-figure,
-figcaption, ul, h1, h2, h3, h4, p, ul, li ,a,button {
-  margin: 0;
-  padding: 0;
+  --size-h2: 50px;
 }
 
 * {
@@ -23,6 +26,16 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   margin-bottom: 50px;
+}
+
+h2{
+  font-weight: 600;
+  color: var(--mainText-color);
+  font-size: 36px;
+}
+
+h3{
+  color: var(--mainText-color);
 }
 
 img {
@@ -70,8 +83,6 @@ a:active {
   flex-basis: 60%;
   max-width: 740px;
   width: 100%;
-  padding-left: 70px;
-  padding-right:30px;
   color: var(--primary-color);
   background-color: #cdbea7;
 }
