--- a/css/skills.css
+++ b/css/skills.css
@@ -29,13 +29,18 @@
     background-color:#882426;
   }
 
-  .skills .progress::after{
+    .skills .progress::after{
     top: 50%;
     transform: translateY(-50%);
     width: var(--dimensionsCircle);
     height: var(--dimensionsCircle);
     border-radius: 50%
   }
+
+  .skills .progress:hover::after{
+    background-color:#c29545;
+  }
+
 
   .skills .progress::before{
     height: 10px;
@@ -50,6 +55,11 @@
   .skills  li:first-child .progress::before{
     width: 90%;
   }
+  
+  .skills  li:first-child:hover .progress::before{
+    background-color:#c29545;
+    cursor:pointer;
+  }
 
   .skills li:nth-child(2) .progress::after {
     left: calc(90% - (var(--dimensionsCircle)/2));
@@ -57,6 +67,11 @@
   
   .skills li:nth-child(2) .progress::before{
     width: 90%;
+  }
+
+  .skills li:nth-child(2):hover .progress::before{
+    background-color:#c29545;
+    cursor:pointer;
   }
 
   .skills li:nth-child(3) .progress::after {
@@ -67,12 +82,22 @@
     width: 55%;
   }
 
+  .skills li:nth-child(3):hover .progress::before{
+    background-color:#c29545;
+    cursor:pointer;
+  }
+
   .skills li:nth-child(4) .progress::after {
     left: calc(65% - (var(--dimensionsCircle)/2));
   }
   
   .skills li:nth-child(4) .progress::before{
     width: 65%;
+  }
+
+  .skills li:nth-child(4):hover .progress::before{
+    background-color:#c29545;
+    cursor:pointer;
   }
 
   .skills li:nth-child(5) .progress::after {
@@ -83,10 +108,20 @@
     width: 55%;
   }
 
+  .skills li:nth-child(5):hover .progress::before{
+    background-color:#c29545;
+    cursor:pointer;
+  }
+
   .skills li:last-child .progress::after{
     left: calc(60% - (var(--dimensionsCircle)/2));
   }
   
   .skills  li:last-child .progress::before{
     width: 60%;
+  }
+
+  .skills  li:last-child:hover .progress::before{
+    background-color:#c29545;
+    cursor:pointer;
   }
