--- a/css/styles.css
+++ b/css/styles.css
@@ -86,5 +86,52 @@ a:active {
 }
 
 
+.scroll-up{
+  position: fixed;
+  right: 25%;
+    bottom: 3%;
+  z-index: 1000;
+  width: 50px;
+  height: 50px;
+  color: #dcddcd;
+  cursor: pointer;
+  visibility: hidden;
+  border-radius: 50%;
+  box-shadow: inset 0 0 0 4px #dcddcd;
+  opacity: 0;
+  transition: .2s;
+  transform: translateY(25px);
+}
+
+.scroll-up::before{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  content: '↑';
+}
+
+.scroll-up:hover{
+  color: orange;
+}
+
+.scroll-up--active{
+  visibility: visible;
+  opacity:1;
+  transform: translateY(0);
+}
+
+.scroll-upSvgPath{
+  box-sizing: border-box;
+  fill: none;
+  stroke: orange;
+  stroke-width: 4px;
+  transition: .2s;
+}
 
  
